--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "next": "^11.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "serverless-postgres": "^1.9.7"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
