--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "test-watch": "jest --watch"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/material": "^5.0.3",
+    "@mui/styles": "^5.0.1",
     "next": "^11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
