--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.3",
     "@mui/styles": "^5.0.1",
+    "@mui/system": "^5.0.3",
     "next": "^11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
