--- a/package.json
+++ b/package.json
@@ -11,26 +11,28 @@
     "test-watch": "jest --watch"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^1.7.0",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@mui/material": "^5.0.3",
-    "@mui/styles": "^5.0.1",
-    "@mui/system": "^5.0.3",
-    "next": "^11.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "serverless-postgres": "^1.9.7"
+    "@auth0/nextjs-auth0": "^3.5.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.4",
+    "@mui/system": "^5.14.4",
+    "next": "^14.1.0",
+    "prisma": "^5.9.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "serverless-postgres": "^2.1.0"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.4.0",
-    "@types/react": "^17.0.14",
-    "eslint": "^7.31.0",
-    "eslint-plugin-jest": "^24.4.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^27.0.6",
-    "typescript": "^4.3.5"
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.10",
+    "@types/react": "^18.2.48",
+    "eslint": "^8.56.0",
+    "eslint-plugin-jest": "^27.6.3",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.7.0",
+    "typescript": "^5.3.3"
   }
 }
