börjar migrera till app router

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,12 +19,19 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "downlevelIteration": true,
-    "incremental": true
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "strictNullChecks": true
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
