--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.4",
+    "@mui/material-nextjs": "^5.15.6",
     "@mui/system": "^5.14.4",
     "next": "^14.1.0",
     "prisma": "^5.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.70.0",
     "serverless-postgres": "^2.1.0"
   },
   "devDependencies": {
