--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start",
     "what": "ECHO Package system: npm",
     "test": "jest",
-    "test-watch": "jest --watch"
+    "test-watch": "jest --watch",
+    "prisma:pull:local": "dotenv -e .env.local -- npx prisma db pull",
+    "prisma:push:local": "dotenv -e .env.local -- npx prisma db push",
+    "prisma:generate:local": "dotenv -e .env.local -- npx prisma generate",
+    "prisma:migrate:dev": "dotenv -e .env.local -- prisma migrate dev"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
@@ -19,6 +23,7 @@
     "@mui/material": "^5.14.4",
     "@mui/material-nextjs": "^5.15.6",
     "@mui/system": "^5.14.4",
+    "@prisma/client": "^5.9.0",
     "next": "^14.1.0",
     "prisma": "^5.9.0",
     "react": "^18.2.0",
@@ -30,6 +35,7 @@
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.10",
     "@types/react": "^18.2.48",
+    "dotenv-cli": "^7.3.0",
     "eslint": "^8.56.0",
     "eslint-plugin-jest": "^27.6.3",
     "eslint-plugin-react": "^7.33.2",
