--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "prisma": "^5.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.70.0",
-    "serverless-postgres": "^2.1.0"
+    "sass": "^1.70.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
