--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/material-nextjs": "^5.15.6",
     "@mui/system": "^5.14.4",
     "@prisma/client": "^5.11.0",
+    "luxon": "^3.4.4",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
