--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "sass": "^1.70.0"
   },
   "devDependencies": {
