--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,24 +1,37 @@
 {
-  "env": {
-    "node": true,
-    "browser": true,
-    "es2021": true,
-    "jest/globals": true
-  },
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:react-hooks/recommended"
-  ],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
+  "extends": ["next", "plugin:import/recommended", "plugin:import/typescript"],
+  "plugins": ["@typescript-eslint"],
+  "parser": "@typescript-eslint/parser",
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
     },
-    "ecmaVersion": 12,
-    "sourceType": "module"
+    "import/resolver": {
+      "typescript": { "alwaysTryTypes": true },
+      "node": true
+    }
   },
-  "plugins": ["react", "jest"],
   "rules": {
-    "react/prop-types": [0]
+    "import/order": [
+      "error",
+      {
+        "groups": [
+          "builtin",
+          "external",
+          "internal",
+          "parent",
+          "sibling",
+          "index",
+          "type"
+        ],
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        }
+      }
+    ],
+    "react/prop-types": [0],
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "warn"
   }
 }
