--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prisma:pull:local": "dotenv -e .env.local -- npx prisma db pull",
     "prisma:push:local": "dotenv -e .env.local -- npx prisma db push",
     "prisma:generate:local": "dotenv -e .env.local -- npx prisma generate",
-    "prisma:migrate:dev": "dotenv -e .env.local -- prisma migrate dev"
+    "prisma:migrate:dev": "dotenv -e .env.local -- prisma migrate dev",
+    "lint": "eslint . --ext .ts,.tsx --fix"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
@@ -33,8 +34,12 @@
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.10",
     "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "dotenv-cli": "^7.3.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.3",
     "eslint-plugin-jest": "^27.6.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
