--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nextjs-typescript-starter",
-  "version": "1.0.1",
+  "name": "namnvaljaren",
+  "version": "1.0.2",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3500",
