--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/material": "^5.14.4",
     "@mui/material-nextjs": "^5.15.6",
     "@mui/system": "^5.14.4",
+    "@mui/x-data-grid": "^7.5.1",
     "@prisma/client": "^5.11.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
